# btc-hashrate

./: CMakeLists.txt  README.md
src/: main.cpp  pool-names.cpp  pool-names.hpp
